# animatron

./: .gitignore  CMakeLists.txt  COPYING  Messages.sh  README  animatron.cpp  animatron.h  animatron.kdev4  animatron.qrc  backgroundlist.cpp  backgroundpage.ui  blacklist.cpp  blacklist.h  config.cpp  config.h  config.ui  fireflies.cpp  fireflies.h  functionpage.ui  imagelist.cpp  imagelist.h  plasma-wallpaper-animatron.desktop  switches.cpp  switches.h  tweak.h
etc/: animatron.xcf  config.ui  desktop-all.xcf  desktop.xcf
t/: CMakeLists.txt  query.cpp
